add swagger and tests. refactoring code.